frontend/tests/cases/negative/localBinding.gr
-- Should fail
foof : Int [3] → Int [1]
foof = λ[x] → [x]
