frontend/tests/cases/negative/localBinding.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/localBinding.gr:3:8:
Expected 3 uses, but instead there are 1 actual uses.